update: update to SpeedrunAPI 2.0-beta.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,6 @@ yarn_mappings = 1.16.1-build.28
 loader_version = 0.16.9
 target_version = 1.16.1
 # https://jitpack.io/#kingcontaria/speedrunapi
-speedrunapi_version = v1.1
+speedrunapi_version = 8497ae7479
 archives_name = sodiummac
 maven_group = me.jellysquid.mods
